sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:4: error: ';' expected but 'for' found.
  {i=false for (i<- 0 to (getNombreValeurs()-2)){
           ^